Added JavaFX to Gradle